feat: swtich to virtual threads
Since we are using Java 21, we can spin up vritual threads. Should be lighter weight than the OS threads.

Also fixed an issue with the pings. Now the cache actually respects when they finish and not when you start the ping.